--- a/templates/Front/Content/Blog/Article/blogArticleProducts.html.twig
+++ b/templates/Front/Content/Blog/Article/blogArticleProducts.html.twig
@@ -1,2 +1,12 @@
 {% import 'Front/Content/Product/productListMacro.html.twig' as productList %}
-{{ productList.verticalList(articleProducts, 'list-article-product', 'a') }}
+
+{% if articleProducts is not empty %}
+    <div class="box-blog__section box-blog__section--gradient">
+        <div class="box-blog__section__in">
+            <h3 class="box-blog__section__title">
+                {{ 'V článku najdete tyto produkty'|trans }}
+            </h3>
+            {{ productList.verticalList(articleProducts, 'list-article-product', 'a') }}
+        </div>
+    </div>
+{% endif %}
