--- a/templates/Front/Content/Product/productListMacro.html.twig
+++ b/templates/Front/Content/Product/productListMacro.html.twig
@@ -243,34 +243,25 @@
     </div>
 {% endmacro %}
 
-{% macro verticalList(products, listCssClass, productHeadingTagName) %}
+{% macro verticalList(productViews, listCssClass, productHeadingTagName) %}
     {% import 'Front/Content/Product/productAvailabilityMacro.html.twig' as availability %}
-    <div class="{{ listCssClass }}" data-count-of-product="{{ products|length }}">
-        {% for product in products %}
+    <div class="{{ listCssClass }}" data-count-of-product="{{ productViews|length }}">
+        {% for productView in productViews %}
             <div class="{{ listCssClass }}__item">
-                <a class="{{ listCssClass }}__item__image dont-print" href="{{ url('front_product_detail', {'id': product.id}) }}">
-                    {{ image(product.productForCreatingImageAccordingToVariant, { size: 'listDetailArticle', alt: product.name, lazy: true }) }}
+                <a class="{{ listCssClass }}__item__image dont-print" href="{{ productView.action.detailUrl }}">
+                    {{ image(productView.image, { size: 'listDetailArticle', alt: productView.name, lazy: true }) }}
                 </a>
 
-                <{{ productHeadingTagName|default('h2') }} class="{{ listCssClass }}__item__title" href="{{ url('front_product_detail', {'id': product.id}) }}">
-                    {{ product.name|striptags|raw }}
-                <{{ '/' ~ productHeadingTagName|default('h2') }}>
-
                 <div class="{{ listCssClass }}__item__info">
-                    <div class="{{ listCssClass }}__item__info__left">
-                        {% if not product.isMainVariant and product.calculatedAvailability %}
-                            {% if not product.isMainVariant and product.calculatedAvailability %}
-                                {% include 'Front/Inline/Product/detailAvailability.html.twig' with { product: product, setDisplayNone: false, type: 'small' } %}
-                            {% else %}
-                                <div class="in-availability">
-                                    {{ 'Dostupnost dle varianty'|trans }}
-                                </div>
-                            {% endif %}
-                        {% endif %}
-                    </div>
+                    <div class="{{ listCssClass }}__item__info__content">
+                        <div class="{{ listCssClass }}__item__info__content__left">
+                            <{{ productHeadingTagName|default('h2') }} class="{{ listCssClass }}__item__info__title" href="{{ productView.action.detailUrl }}">
+                                {{ productView.name|striptags|raw }}
+                            <{{ '/' ~ productHeadingTagName|default('h2') }}>
+                        </div>
 
-                    <div class="{{ listCssClass }}__item__info__right">
-                        {% set productSellingPrice = getProductSellingPrice(product) %}
+                        <div class="{{ listCssClass }}__item__info__content__right">
+                            {% set productSellingPrice = productView.sellingPrice %}
 
                         {% if productSellingPrice is not null %}
                             <div class="{{ listCssClass }}__item__info__price">
@@ -287,9 +278,17 @@
                                         </div>
                                     {% endif %}
                                 </div>
-                            </div>
-                        {% endif %}
-                        {{ render(controller('App\\Controller\\Front\\CartController:addProductFormAction', {product: product, showAmountInput: false, type: 'detailArticle', displayVariantSelectButton: true})) }}
+                            {% endif %}
+                            
+                            {% include 'Front/Content/Product/productViewAvailability.html.twig' %}
+                        </div>
+                    </div>
+                    <div class="{{ listCssClass }}__item__add-button">
+                        {{ render(controller('App\\Controller\\Front\\CartController:productActionAction', {
+                            listedProductView: productView,
+                            type: 'detailArticle',
+                            showAmountInput: false
+                        } )) }}
                     </div>
                 </div>
             </div>
