--- a/assets/styles/frontend/common/components/list/tags.less
+++ b/assets/styles/frontend/common/components/list/tags.less
@@ -6,6 +6,12 @@
     flex-wrap: wrap;
     margin-left: -@list-tags-item-gap;
 
+    &--sets {
+        position: absolute;
+        right: 22px;
+        z-index: @z-index-above;
+    }
+
     &__tag {
         line-height: 18px;
         padding: 1px 10px;
@@ -18,5 +24,13 @@
         font-weight: 600;
         border-radius: 10px;
         background-color: @color-add;
+
+        .list-tags--sets & {
+            line-height: 21px;
+            text-transform: none;
+
+            font-size: @font-size-small;
+            border-radius: @radius-medium;
+        } 
     }
 }
