--- a/assets/styles/frontend/common/layout/header/search.less
+++ b/assets/styles/frontend/common/layout/header/search.less
@@ -79,7 +79,7 @@
         width: 100%;
         top: @search-input-height-small;
         left: 0;
-        z-index: @z-index-above;
+        z-index: @z-index-above + 1;
         padding: 20px;
 
         background-color: @color-box;
