--- a/templates/Front/Inline/Cart/cartBox.html.twig
+++ b/templates/Front/Inline/Cart/cartBox.html.twig
@@ -42,25 +42,29 @@
                         <ul class="cart-detail">
                             {% for cartItem in cartItems %}
                                 {% set quantifiedItemPrice = orderPreview.quantifiedItemsPrices[loop.index0] %}
-                                <li class="cart-detail__item">
-                                    {% if cartItem.product.isPohodaProductTypeGroup %}
-                                        {% for productGroup in cartItem.product.productGroups %}
-                                            <div class="cart-detail__item__image">
-                                                {{ image(productGroup.item.productForCreatingImageAccordingToVariant, {size: 'thumbnail'}) }}
-                                            </div>+
-                                        {% endfor %}
-                                    {% else %}
-                                        <div class="cart-detail__item__image">
-                                            {{ image(cartItem.product.productForCreatingImageAccordingToVariant, {size: 'thumbnail'}) }}
-                                        </div>
-                                    {% endif %}
+                                <li class="cart-detail__item{% if cartItem.product.isPohodaProductTypeGroup %} cart-detail__item--sets{% endif %}">
                                     <div class="cart-detail__item__content">
-                                        <a class="cart-detail__item__content__title" href="{{ url('front_product_detail', {id: cartItem.product.id}) }}" title="Product name">{{ cartItem.product.name }}</a>
-                                        <span class="cart-detail__item__content__price"> {{ quantifiedItemPrice.unitPrice.priceWithVat|price }}
-                                            {% if quantifiedItemPrice.unitPrice.hasHigherStandardPrice %}
-                                                <span class="cart-detail__item__content__price__old">{{ quantifiedItemPrice.unitPrice.standardPrice.priceWithVat|price }}</span>
-                                            {% endif %}
-                                        </span>
+                                         {% if cartItem.product.isPohodaProductTypeGroup %}
+                                            <div class="cart-detail__item__wrap-image">
+                                                {% for productGroup in cartItem.product.productGroups %}
+                                                    <div class="cart-detail__item__image cart-detail__item__image--sets svg svg-plus-big">
+                                                        {{ image(productGroup.item.productForCreatingImageAccordingToVariant, {size: 'thumbnail'}) }}
+                                                    </div>
+                                                {% endfor %}
+                                            </div>
+                                        {% else %}
+                                            <div class="cart-detail__item__image">
+                                                {{ image(cartItem.product.productForCreatingImageAccordingToVariant, {size: 'thumbnail'}) }}
+                                            </div>
+                                        {% endif %}
+                                        <div class="cart-detail__item__content__info">
+                                            <a class="cart-detail__item__content__title" href="{{ url('front_product_detail', {id: cartItem.product.id}) }}" title="Product name">{{ cartItem.product.name }}</a>
+                                            <span class="cart-detail__item__content__price"> {{ quantifiedItemPrice.unitPrice.priceWithVat|price }}
+                                                {% if quantifiedItemPrice.unitPrice.hasHigherStandardPrice %}
+                                                    <span class="cart-detail__item__content__price__old">{{ quantifiedItemPrice.unitPrice.standardPrice.priceWithVat|price }}</span>
+                                                {% endif %}
+                                            </span>
+                                        </div>
                                     </div>
                                     <div class="cart-detail__item__pieces">
                                         {{ cartItem.quantity|formatNumber }} {{ cartItem.product.unit.name }}
