--- a/assets/styles/frontend/common/components/list/cart-preview.less
+++ b/assets/styles/frontend/common/components/list/cart-preview.less
@@ -1,4 +1,5 @@
 @list-cart-preview-image-size: 70px;
+@list-cart-preview-image-size-small: 50px;
 @list-cart-preview-title-size: 120px;
 @list-cart-preview-item-bottom-gap: 25px;
 @list-cart-preview-item-title-lines: 2;
@@ -40,21 +41,67 @@
             border-bottom: 0;
         }
 
+        &--sets {
+            @media @query-md {
+                flex-wrap: wrap;
+            }
+        }
+
+        &__wrap-image {
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            margin-bottom: 10px;
+        }
+
         &__image {
-            width: @list-cart-preview-image-size + @list-cart-preview-item-gap;
+            position: relative;
+            width: @list-cart-preview-image-size;
             height: @list-cart-preview-image-size;
-            line-height: @list-cart-preview-image-size;
-            padding-right: @list-cart-preview-item-gap;
+
+            &:last-child {
+                margin-right: 0;
+
+                &::before {
+                    display: none;
+                }
+            }
+
+            &--sets {
+                width: @list-cart-preview-image-size-small - 23px;
+                height: @list-cart-preview-image-size-small - 23px;
+                margin-right: 20px;
+
+                @media @query-sm {
+                    width: @list-cart-preview-image-size-small - 15px;
+                    height: @list-cart-preview-image-size-small - 15px;
+                }
+
+                @media @query-md {
+                    width: @list-cart-preview-image-size-small;
+                    height: @list-cart-preview-image-size-small;
+                }
+
+                &:before {
+                    z-index: @z-index-above;
+                    position: absolute;
+                    right: -15px;
+                    top: 50%;
+                    transform: translateY(-50%);
+
+                    font-size: 11px;
+                    color: @color-turquoise;
+                }
+            }
 
             img {
-                display: inline-block;
-                vertical-align: middle;
+                .center-image();
             }
         }
 
         &__pieces {
             line-height: 18px;
-            padding-right: @list-cart-preview-item-gap;
+            padding: 0 @list-cart-preview-item-gap;
 
             font-size: @font-size-extra-small;
         }
