--- a/templates/Front/Inline/Cart/afterAddWindow.html.twig
+++ b/templates/Front/Inline/Cart/afterAddWindow.html.twig
@@ -11,13 +11,15 @@
             </span>
         </div>
         {% for cartItem in addedItems %}
-            <div class="box-popup-add__content__product">
+            <div class="box-popup-add__content__product{% if cartItem.product.isPohodaProductTypeGroup %} box-popup-add__content__product--sets{% endif %}">
                 {% if cartItem.product.isPohodaProductTypeGroup %}
-                    {% for productGroup in cartItem.product.productGroups %}
-                        <div class="box-popup-add__content__product__image">
-                            {{ image(productGroup.item.productForCreatingImageAccordingToVariant, {size: 'thumbnail', lazy: false}) }}
-                        </div>+
-                    {% endfor %}
+                    <div class="box-popup-add__content__product__wrap-image">
+                        {% for productGroup in cartItem.product.productGroups %}
+                            <div class="box-popup-add__content__product__image box-popup-add__content__product__image--sets svg svg-plus-big">
+                                {{ image(productGroup.item.productForCreatingImageAccordingToVariant, {size: 'thumbnail', lazy: false}) }}
+                            </div>
+                        {% endfor %}
+                    </div>
                 {% else %}
                     <div class="box-popup-add__content__product__image">
                         {{ image(cartItem.product.productForCreatingImageAccordingToVariant, {size: 'thumbnail', lazy: false}) }}
