--- a/templates/Admin/Form/transportPricesFields.html.twig
+++ b/templates/Admin/Form/transportPricesFields.html.twig
@@ -56,21 +56,6 @@
                     </div>
                 </div>
 
-                <div class="form-price-heading">
-                    <div class="form-price-heading__cell form-price-heading__cell--field form-price-heading__cell--action"></div>
-                    <div class="form-price-heading__cell form-price-heading__cell--field">
-                        {{ form_label(form.minOrderPricesIndexedByDomainId[domainId]) }}
-                    </div>
-                    <div class="form-price-heading__block">
-                        <div class="form-price-heading__cell form-price-heading__cell--price">
-                            {{ form_label(form.actionDatesFromIndexedByDomainId[domainId]) }}
-                        </div>
-                        <div class="form-price-heading__cell form-price-heading__cell--price">
-                            {{ form_label(form.actionDatesToIndexedByDomainId[domainId]) }}
-                        </div>
-                    </div>
-                </div>
-
                 <div class="form-line form-line--in-box">
                     <div class="form-line__label">
                         {{ form_label(form.actionPricesIndexedByDomainId[domainId]) }}
@@ -79,29 +64,43 @@
                         <div class="form-line__item">
                             {{ form_widget(form.actionPricesIndexedByDomainId[domainId], { symbolAfterInput: currencySymbolByDomainId(domainId) }) }}
                         </div>
+                        <div>
+                            {{ form_errors(form.actionPricesIndexedByDomainId[domainId] ) }}
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-line form-line--in-box">
+                    <div class="form-line__label">
+                        {{ form_label(form.minOrderPricesIndexedByDomainId[domainId]) }}
+                    </div>
+                    <div class="form-line__side">
                         <div class="form-line__item">
                             {{ form_widget(form.minOrderPricesIndexedByDomainId[domainId], { symbolAfterInput: currencySymbolByDomainId(domainId) }) }}
                         </div>
-                        <div class="form-line__item--right">
-                            <div class="form-line__item__price">
-                                <div class="form-line__item__price__label-mobile">
-                                    {{ form_label(form.actionDatesFromIndexedByDomainId[domainId]) }}
-                                </div>
-                                {{ form_widget(form.actionDatesFromIndexedByDomainId[domainId]) }}
-                            </div>
-                            <div class="form-line__item__price">
-                                <div class="form-line__item__price__label-mobile">
-                                    {{ form_label(form.actionDatesToIndexedByDomainId[domainId]) }}
-                                </div>
-                                {{ form_widget(form.actionDatesToIndexedByDomainId[domainId]) }}
-                            </div>
-                        </div>
                         <div>
-                            {{ form_errors(form.actionPricesIndexedByDomainId[domainId] ) }}
                             {{ form_errors(form.minOrderPricesIndexedByDomainId[domainId] ) }}
-                            {{ form_errors(form.actionDatesFromIndexedByDomainId[domainId] ) }}
-                            {{ form_errors(form.actionDatesToIndexedByDomainId[domainId] ) }}
                         </div>
+                    </div>
+                </div>
+
+                <div class="form-line form-line--in-box">
+                    <div class="form-line__label">
+                        {{ form_label(form.actionDatesFromIndexedByDomainId[domainId]) }}
+                    </div>
+                    {{ form_widget(form.actionDatesFromIndexedByDomainId[domainId]) }}
+                    <div>
+                        {{ form_errors(form.actionDatesFromIndexedByDomainId[domainId] ) }}
+                    </div>
+                </div>
+
+                <div class="form-line form-line--in-box">
+                    <div class="form-line__label">
+                        {{ form_label(form.actionDatesToIndexedByDomainId[domainId]) }}
+                    </div>
+                    {{ form_widget(form.actionDatesToIndexedByDomainId[domainId]) }}
+                    <div>
+                        {{ form_errors(form.actionDatesToIndexedByDomainId[domainId] ) }}
                     </div>
                 </div>
             </div>
