--- a/assets/styles/frontend/common/components/box/list.less
+++ b/assets/styles/frontend/common/components/box/list.less
@@ -32,6 +32,10 @@
         position: relative;
         display: flex;
         flex-direction: row;
+
+        &--wrapped {
+            flex-wrap: wrap;
+        }
     }
 
     &__panel {
@@ -63,13 +67,10 @@
         @media @query-vl {
             width: calc(~"100% - (@{box-list-panel-width} + @{box-list-panel-gap})");
         }
-    }
 
-    &__categories {
-        margin-bottom: 40px;
-        
-        border: 3px solid @color-border;
-        border-radius: @radius;
+        &--full-width {
+            width: 100%;
+        }
     }
 
     &__products {
