--- a/assets/styles/frontend/common/components/box/order-type.less
+++ b/assets/styles/frontend/common/components/box/order-type.less
@@ -13,6 +13,10 @@
         flex-direction: row;
     }
 
+    @media @query-vl {
+        margin-bottom: 25px;
+    }
+
     &__list {
         .clearfix();
         width: 100%;
