--- a/assets/styles/frontend/common/components/list/categories.less
+++ b/assets/styles/frontend/common/components/list/categories.less
@@ -3,6 +3,13 @@
 @list-categories-image-size: 56px;
 @list-categories-item-border-size: 1px;
 
+.list-categories-wrap {
+    margin-bottom: 40px;
+        
+    border: 3px solid @color-border;
+    border-radius: @radius;
+}
+
 .list-categories {
     .reset-ul();
     .clearfix();
