--- a/templates/Front/Content/Product/groupList.html.twig
+++ b/templates/Front/Content/Product/groupList.html.twig
@@ -2,6 +2,7 @@
 {% import 'Front/Inline/Paginator/paginator.html.twig' as paginator %}
 
 {% if paginationResultGroups.results|length > 0 %}
+    <h3 class="box-search__subtitle">{{ 'Nalezené sety'|trans }}</h3>
     <div class="box-list__panel"></div>
 {% endif %}
 <div class="box-list__content">
