--- a/templates/Front/Content/Product/search.html.twig
+++ b/templates/Front/Content/Product/search.html.twig
@@ -72,7 +72,8 @@
                                         'search',
                                         productFilterCountData,
                                         priceRange,
-                                        filterFormSubmitted
+                                        filterFormSubmitted,
+                                        allowBrandLinks
                                     ) }}
                                 </div>
                             </div>
