--- a/templates/Front/Content/Product/ajaxList.html.twig
+++ b/templates/Front/Content/Product/ajaxList.html.twig
@@ -1,6 +1,7 @@
 {% import 'Front/Content/Product/filterFormMacro.html.twig' as productFilterForm %}
 
 <input type="hidden" id="js-product-list-ajax-filter-current-url" value="{{ url(getRoute(), getAllRequestParams()) }}">
+<input type="hidden" id="js-product-list-ajax-category-title" value="{{ categoryTitle }}">
 <div class="box-list__wrap">
     <div class="box-list__panel js-product-list-panel">
         <div class="box-filter js-product-filter">
@@ -17,7 +18,8 @@
                 'product_list',
                 productFilterCountData,
                 priceRange,
-                filterFormSubmitted
+                filterFormSubmitted,
+                allowBrandLinks
             ) }}
         </div>
     </div>
