--- a/templates/Front/Content/Product/list.html.twig
+++ b/templates/Front/Content/Product/list.html.twig
@@ -21,11 +21,8 @@
     <div class="box-list">
         <div class="web__line">
             <div class="web__container">
-                <h1 class="box-list__title">
-                    {% if saleCategoryFriendlyUrl is not null %}
-                    Výprodej -
-                    {% endif %}
-                    {{ category.getSeoH1(domain.id)|default(category.name) }}
+                <h1 class="box-list__title js-category-title">
+                    {{ categoryTitle }}
                 </h1>
 
                 {{ render(controller('App\\Controller\\Front\\AdvertController:boxAction', {'advert' : category.getAdvert()})) }}
@@ -51,7 +48,8 @@
                                     'product_list',
                                     productFilterCountData,
                                     priceRange,
-                                    filterFormSubmitted
+                                    filterFormSubmitted,
+                                    allowBrandLinks
                                 ) }}
                             </div>
                         </div>
