design: small css issues after test

--- a/assets/styles/frontend/common/components/box/popup-add.less
+++ b/assets/styles/frontend/common/components/box/popup-add.less
@@ -110,6 +110,7 @@
 
                 img {
                     .center-image();
+                    mix-blend-mode: multiply;
                 }
             }
 
