--- a/templates/Front/Content/Product/search.html.twig
+++ b/templates/Front/Content/Product/search.html.twig
@@ -19,15 +19,6 @@
             </div>
         </div>
 
-        {% if foundCategories|length > 0 %}
-            <div class="web__line">
-                <div class="web__container">
-                    <h3 class="box-search__subtitle">{{ 'Nalezené kategorie'|trans }}</h3>
-                    {% include 'Front/Content/Category/categoryList.html.twig' with {'categories': foundCategories, 'cssClass': 'list-categories--four-on-row', 'title': 'Nalezené kategorie'|trans, 'showText': false } %}
-                </div>
-            </div>
-        {% endif %}
-
         {% if
             foundCategories|length > 0
             or paginationResultProducts.results|length > 0
@@ -35,36 +26,41 @@
         %}
             <div class="web__line">
                 <div class="web__container">
-                    <div class="in-tab in-tab--everytime-visible in-tab--full-width js-anchor-tabs">
-                        <div class="in-tab__wrap in-tab__wrap--small-gap">
-                            <div class="in-tab__head dont-print">
-                                {% if foundCategories|length > 0 %}
-                                    <a href="#" class="in-tab__head__item js-tabs-button" data-tab-id="categories">
-                                        {{ 'Kategorie'|trans }} ({{ foundCategories|length }})
-                                    </a>
-                                {% endif %}
-                                {% if paginationResultProducts.results|length > 0 %}
-                                    <a href="#" class="in-tab__head__item js-tabs-button" data-tab-id="products">
-                                        {{ 'Produkty'|trans }} ({{ paginationResultProducts.totalCount }})
-                                    </a>
-                                {% endif %}
-                                {% if paginationResultGroups.results|length > 0 %}
-                                    <a href="#" class="in-tab__head__item js-tabs-button" data-tab-id="sets">
-                                        {{ 'Sety'|trans }} ({{ paginationResultGroups.totalCount }})
-                                    </a>
-                                {% endif %}
-                            </div>
-                        </div>
+                    <div class="box-search__navigation">
+                        {% if foundCategories|length > 0 %}
+                            <a href="#categories" data-space-above-position="0" class="box-search__navigation__item js-scroll-to-position" data-tab-id="categories">
+                                {{ 'Kategorie'|trans }} ({{ foundCategories|length }})
+                            </a>
+                        {% endif %}
+                        {% if paginationResultProducts.results|length > 0 %}
+                            <a href="#products" data-space-above-position="0" class="box-search__navigation__item js-scroll-to-position" data-tab-id="products">
+                                {{ 'Produkty'|trans }} ({{ paginationResultProducts.totalCount }})
+                            </a>
+                        {% endif %}
+                        {% if paginationResultGroups.results|length > 0 %}
+                            <a href="#sets" data-space-above-position="0" class="box-search__navigation__item js-scroll-to-position" data-tab-id="sets">
+                                {{ 'Sety'|trans }} ({{ paginationResultGroups.totalCount }})
+                            </a>
+                        {% endif %}
                     </div>
+                </div>
+            </div>
+        {% endif %}
+
+        {% if foundCategories|length > 0 %}
+            <div class="web__line" id="categories">
+                <div class="web__container">
+                    <h3 class="box-search__subtitle">{{ 'Nalezené kategorie'|trans }}</h3>
+                    {% include 'Front/Content/Category/categoryList.html.twig' with {'categories': foundCategories, 'cssClass': 'list-categories--four-on-row', 'title': 'Nalezené kategorie'|trans, 'showText': false } %}
                 </div>
             </div>
         {% endif %}
 
         <div class="web__line">
             <div class="web__container">
-                <h3 class="box-search__subtitle">{{ 'Nalezené produkty'|trans }}</h3>
+                <h3 class="box-search__subtitle" id="products">{{ 'Nalezené produkty'|trans }}</h3>
                 <div class="box-list box-list--search">
-                    <div class="box-list__wrap js-product-list-with-filter js-tabs-content" data-tab-id="products">
+                    <div class="box-list__wrap js-product-list-with-filter js-tabs-content">
                         {% if paginationResultProducts.results|length > 0 or filterFormSubmitted %}
                             <div class="box-list__panel js-product-list-panel">
                                 <div class="box-filter js-product-filter">
@@ -90,7 +86,7 @@
                         </div>
                     </div>
 
-                    <div class="box-list__wrap box-list__wrap--wrapped js-tabs-content" data-tab-id="sets">
+                    <div class="box-list__wrap box-list__wrap--wrapped js-tabs-content" id="sets">
                         {{ render(controller('App\\Controller\\Front\\ProductController:renderGroupsBySearchTextAction', {paginationResultGroups: paginationResultGroups, searchText: searchText})) }}
                     </div>
                 </div>
