--- a/assets/styles/frontend/common/components/list/categories.less
+++ b/assets/styles/frontend/common/components/list/categories.less
@@ -55,19 +55,8 @@
         }
 
         .list-categories--four-on-row & {
-            width: calc(~"@{calc-base} / 2");
-            max-height: 300px;
-
-            img {
-                max-height: 150px;
-            }
-
-            @media @query-md {
+            @media @query-vl {
                 width: calc(~"@{calc-base} / 4");
-
-                img {
-                    max-height: 200px;
-                }
             }
         }
 
