--- a/templates/Front/Content/Product/groupList.html.twig
+++ b/templates/Front/Content/Product/groupList.html.twig
@@ -6,7 +6,7 @@
     <div class="box-list__panel"></div>
 {% endif %}
 <div class="box-list__content">
-    <div class="box-list__products js-list-with-paginator">
+    <div class="box-list__products box-list__products--without-gap js-list-with-paginator">
         {{ productList.list(paginationResultGroups.results) }}
         <div class="box-list__actions">
             <div class="box-list__actions__button">
